--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -614,6 +614,25 @@ The Org-roam buffer displays backlinks for the currently active Org-roam note.
 Org-roam files are created and prefilled using Org-roam's templating
 system. The templating system is customizable (see [[*The Templating System][The Templating System]]).
 
+** Org-roam Faces
+
+Org-roam introduces several faces to distinguish links within the same buffer.
+These faces are enabled by default in Org-roam notes.
+
+- User Option: org-roam-link-use-custom-faces
+
+  When ~t~, use custom faces only inside Org-roam notes.
+  When ~everywhere~, the custom face is applied additionally to non Org-roam notes.
+  When ~nil~, do not use Org-roam's custom faces.
+
+The ~org-roam-link~ face is the face applied to links to other Org-roam files.
+This distinguishes internal links from external links (e.g. external web links).
+
+The ~org-roam-link-current~ face corresponds to links to the same file it is in.
+
+The ~org-roam-link-invalid~ face is applied to links that are broken. These are
+links to files or IDs that cannot be found.
+
 * Inserting Links
 
 The preferred mode of linking is via ~file~ links to files, and ~id~ links for
@@ -672,7 +691,6 @@ To easily insert ~roam~ links, one may wish to use a package like [[https://gith
   harder to edit. Defaults to ~t~.
 
 * Navigating Around
-
 ** Index File
 
 As your collection grows, you might want to create an index where you keep links
