--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -1055,10 +1055,15 @@ facilities for discovering these unlinked references, so one may decide whether
 to convert them into links.
 
 To use this feature, simply call ~M-x org-roam-unlinked-references~ from within
-an Org-roam note. Org-roam uses [[https://github.com/BurntSushi/ripgrep][ripgrep]], specifically a clever PCRE regex to
+an Org-roam note. Internally, Org-roam uses [[https://github.com/BurntSushi/ripgrep][ripgrep]] and a clever PCRE regex to
 find occurrences of the title or aliases of the currently open note in all
-Org-roam files. This thus requires a version of ripgrep that is compiled with
+Org-roam files. Hence, this requires a version of ripgrep that is compiled with
 PCRE support.
+
+#+begin_quote
+NOTE: Since ripgrep cannot read encrypted files, this function cannot find
+unlinked references within encrypted files.
+#+end_quote
 
 * Performance Optimization
 ** TODO Profiling Key Operations
