--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -1396,10 +1396,16 @@ facilities for discovering these unlinked references, so one may decide whether
 to convert them into links.
 
 To use this feature, simply call @code{M-x org-roam-unlinked-references} from within
-an Org-roam note. Org-roam uses @uref{https://github.com/BurntSushi/ripgrep, ripgrep}, specifically a clever PCRE regex to
+an Org-roam note. Internally, Org-roam uses @uref{https://github.com/BurntSushi/ripgrep, ripgrep} and a clever PCRE regex to
 find occurrences of the title or aliases of the currently open note in all
-Org-roam files. This thus requires a version of ripgrep that is compiled with
+Org-roam files. Hence, this requires a version of ripgrep that is compiled with
 PCRE support.
+
+@quotation
+NOTE: Since ripgrep cannot read encrypted files, this function cannot find
+unlinked references within encrypted files.
+
+@end quotation
 
 @node Performance Optimization
 @chapter Performance Optimization
