doc: Change suggested path for org-journal
Otherwise, it clashes with the blurb which mentions isolation.

--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -1213,7 +1213,7 @@ write on a scratchpad.
     :custom
     (org-journal-date-prefix "#+title: ")
     (org-journal-file-format "%Y-%m-%d.org")
-    (org-journal-dir "/path/to/org-roam-files/")
+    (org-journal-dir "/path/to/journal/files/")
     (org-journal-date-format "%A, %d %B %Y"))
 #+END_SRC
 
