--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -1706,7 +1706,7 @@ write on a scratchpad.
   :custom
   (org-journal-date-prefix "#+title: ")
   (org-journal-file-format "%Y-%m-%d.org")
-  (org-journal-dir "/path/to/org-roam-files/")
+  (org-journal-dir "/path/to/journal/files/")
   (org-journal-date-format "%A, %d %B %Y"))
 @end lisp
 
